# stock

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: db.py  main.py  settings.py
backend/app/api/: router.py
backend/app/api/endpoints/: config.py  feeds.py  market.py  ranks.py  strategies.py  users.py
backend/app/services/: fupanwang.py  market.py
frontend/: index.html  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Layout.jsx
frontend/src/lib/: api.js  nav.js  task.jsx  user.jsx
frontend/src/pages/: Downloads.jsx  Home.jsx  Intel.jsx  Lhb.jsx  Partner.jsx  Placeholder.jsx  Popularity.jsx  Review.jsx  Strategies.jsx  Vip.jsx  Watchlist.jsx
frontend/src/styles/: app.css
