[project]
name = "stock-backend"
version = "0.1.0"
description = "FastAPI backend for stock site clone"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-multipart>=0.0.9",
  "passlib[bcrypt]>=1.7",
  "PyMySQL>=1.1",
  "httpx>=0.27",
  "cryptography>=42.0"
]

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000
reload = true
